@@ -21,6 +21,16 @@
 
 package qupath.opencv.tools;
 
+import org.bytedeco.javacpp.FloatPointer;
+import org.bytedeco.javacpp.indexer.FloatIndexer;
+import org.bytedeco.javacpp.indexer.IntIndexer;
+import org.bytedeco.opencv.global.opencv_core;
+import org.bytedeco.opencv.global.opencv_imgproc;
+import org.bytedeco.opencv.opencv_core.Mat;
+import org.bytedeco.opencv.opencv_core.MatExpr;
+import org.bytedeco.opencv.opencv_core.Rect;
+import qupath.lib.images.servers.PixelCalibration;
+
 import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -30,16 +40,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import org.bytedeco.javacpp.FloatPointer;
-import org.bytedeco.javacpp.indexer.FloatIndexer;
-import org.bytedeco.javacpp.indexer.IntIndexer;
-import org.bytedeco.opencv.global.opencv_core;
-import org.bytedeco.opencv.global.opencv_imgproc;
-import org.bytedeco.opencv.opencv_core.Mat;
-import org.bytedeco.opencv.opencv_core.MatExpr;
-import org.bytedeco.opencv.opencv_core.Rect;
-
-import qupath.lib.images.servers.PixelCalibration;
 
 /**
  * Calculate pixel-based features in both 2D and 3D.
@@ -526,9 +526,9 @@ public class MultiscaleFeatures {
 		 */
 		public FeatureMap build(List<Mat> mats, int ind) {
 			if (sigmaZ > 0) {
-				return build3D(mats, ind).get(0);
+				return build3D(mats, ind).getFirst();
 			}
-			return build2D(Collections.singletonList(mats.get(ind))).get(0);
+			return build2D(Collections.singletonList(mats.get(ind))).getFirst();
 		}
 		
 		/**
