@@ -2,7 +2,7 @@
  * #%L
  * This file is part of QuPath.
  * %%
- * Copyright (C) 2022 QuPath developers, The University of Edinburgh
+ * Copyright (C) 2022, 2024 - 2025 QuPath developers, The University of Edinburgh
  * %%
  * QuPath is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as
@@ -21,17 +21,13 @@
 
 package qupath.lib.gui.scripting.languages;
 
-import java.util.ServiceLoader;
-import java.util.Set;
-
-import javax.script.ScriptException;
-
+import com.google.common.collect.ImmutableSet;
 import org.commonmark.parser.Parser;
 import org.commonmark.renderer.html.HtmlRenderer;
-
 import qupath.lib.scripting.ScriptParameters;
-import qupath.lib.scripting.languages.ScriptAutoCompletor;
 import qupath.lib.scripting.languages.ScriptLanguage;
+
+import javax.script.ScriptException;
 
 /**
  * Class for the representation of JSON syntax in QuPath.
@@ -42,28 +38,11 @@ import qupath.lib.scripting.languages.ScriptLanguage;
  * @since v0.4.0
  */
 public class MarkdownLanguage extends ScriptLanguage implements qupath.lib.gui.scripting.languages.HtmlRenderer {
-	
-	/**
-	 * Instance of this language. Can't be final because of {@link ServiceLoader}.
-	 */
-	private static MarkdownLanguage INSTANCE;
-	
-	private ScriptAutoCompletor completor = null;
-	
-	/**
-	 * Constructor for JSON language. This constructor should never be 
-	 * called. Instead, use the static {@link #getInstance()} method.
-	 * <p>
-	 * Note: this has to be public for the {@link ServiceLoader} to work.
-	 */
-	public MarkdownLanguage() {
-		super("Markdown", Set.of(".md", ".markdown"));
-		
-		if (INSTANCE != null)
-			throw new UnsupportedOperationException("Language classes cannot be instantiated more than once!");
-		
-		// Because of ServiceLoader, have to assign INSTANCE here.
-		MarkdownLanguage.INSTANCE = this;
+
+	private static final MarkdownLanguage INSTANCE = new MarkdownLanguage();
+
+	private MarkdownLanguage() {
+		super("Markdown", ImmutableSet.of(".md", ".markdown"));
 	}
 
 	/**
@@ -72,11 +51,6 @@ public class MarkdownLanguage extends ScriptLanguage implements qupath.lib.gui.s
 	 */
 	public static MarkdownLanguage getInstance() {
 		return INSTANCE;
-	}
-
-	@Override
-	public ScriptAutoCompletor getAutoCompletor() {
-		return completor;
 	}
 	
 
